--- a/blog/2025-11-22-first-blog-post.mdx
+++ b/blog/2025-11-22-first-blog-post.mdx
@@ -2,7 +2,7 @@
 slug: 2025-11-22-site-development
 title: 关于本站和其它站点的关系
 authors: [mcenahle]
-tags: [站点建设]
+tags: [site-development]
 ---
 
 这个网站 `diary.mcenahle.org.cn` 虽然也是记录随笔的网站，但内容为高度私密的，因此只开放上海地区进行访问。
@@ -14,4 +14,4 @@ tags: [站点建设]
 |www 上的随笔|[https://www.mcenahle.org.cn/thoughts/](https://www.mcenahle.org.cn/thoughts/)|从生活出发，偏思索类|
 |博客|[https://blog.mcenahle.org.cn/](https://blog.mcenahle.org.cn/)|纯生活类|
 
-2025年11月24日，其他记录文字的区域全部停止记录（博客除外），之后的随笔全部放置在 https://diary.mcenahle.org.cn（本站）上进行记录。
+2025年11月24日，其他记录文字的区域全部停止记录（博客除外），之后的随笔全部放置在 [https://diary.mcenahle.org.cn](https://diary.mcenahle.org.cn)（本站）上进行记录。
